--- a/inSooqApp/Base.lproj/Adding.storyboard
+++ b/inSooqApp/Base.lproj/Adding.storyboard
@@ -2650,11 +2650,11 @@
             <objects>
                 <viewController storyboardIdentifier="Add_FullSpecesViewController" id="HA1-Y2-zzv" customClass="Add_FullSpecesViewController" customModule="inSooqApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="DMN-rQ-kR9">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="2000"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ese-jI-5zt">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="44" width="414" height="1922"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="lwr-8R-FEv">
                                         <rect key="frame" x="20" y="20" width="374" height="1639"/>
@@ -3286,6 +3286,7 @@
                             <constraint firstItem="MhA-DF-K6w" firstAttribute="bottom" secondItem="ese-jI-5zt" secondAttribute="bottom" id="gp1-hU-Lkd"/>
                         </constraints>
                     </view>
+                    <size key="freeformSize" width="414" height="2000"/>
                     <connections>
                         <outlet property="bodyTypeTextField" destination="gJd-y2-XlX" id="MwG-rO-pQn"/>
                         <outlet property="cardView" destination="RfZ-ip-RWT" id="mOT-w8-MyT"/>
