--- a/inSooqApp/Custom UI/View Popup List/ViewPopupListOfItems.xib
+++ b/inSooqApp/Custom UI/View Popup List/ViewPopupListOfItems.xib
@@ -17,13 +17,13 @@
             <subviews>
                 <view alpha="0.59999999999999998" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HKJ-2f-NGi" userLabel="ViewTransparent">
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.5" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="Vlp-Nb-Vb6">
-                    <rect key="frame" x="10" y="309.5" width="394" height="287"/>
+                    <rect key="frame" x="20" y="284.5" width="374" height="337"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="55T-uO-aqA" userLabel="ViewSearch">
-                            <rect key="frame" x="0.0" y="0.0" width="394" height="137"/>
+                            <rect key="frame" x="0.0" y="0.0" width="374" height="137"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Item" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xav-TR-e0G">
                                     <rect key="frame" x="16" y="16" width="86" height="60.5"/>
@@ -40,7 +40,7 @@
                                     </constraints>
                                 </imageView>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aC8-wB-Hf7">
-                                    <rect key="frame" x="44" y="86.5" width="334" height="40"/>
+                                    <rect key="frame" x="44" y="86.5" width="314" height="40"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="40" id="k3H-bB-aAR"/>
                                     </constraints>
@@ -48,7 +48,7 @@
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHN-SS-mtI">
-                                    <rect key="frame" x="44" y="126.5" width="334" height="1"/>
+                                    <rect key="frame" x="44" y="126.5" width="314" height="1"/>
                                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <constraints>
                                         <constraint firstAttribute="height" constant="1" id="cCf-tp-ewx"/>
@@ -71,10 +71,10 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FwC-F4-Ohf">
-                            <rect key="frame" x="0.0" y="137" width="394" height="100"/>
+                            <rect key="frame" x="0.0" y="137" width="374" height="100"/>
                             <subviews>
                                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="hM3-Qm-T6h">
-                                    <rect key="frame" x="16" y="0.0" width="362" height="84"/>
+                                    <rect key="frame" x="16" y="0.0" width="342" height="84"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 </tableView>
                             </subviews>
@@ -87,11 +87,29 @@
                                 <constraint firstAttribute="trailing" secondItem="hM3-Qm-T6h" secondAttribute="trailing" constant="16" id="kQo-n8-kDp"/>
                             </constraints>
                         </view>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4oj-fa-nqT">
+                            <rect key="frame" x="0.0" y="237" width="374" height="50"/>
+                            <subviews>
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="jjj" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="4Vc-63-GPi">
+                                    <rect key="frame" x="20" y="4" width="334" height="42"/>
+                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </textField>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstAttribute="bottom" secondItem="4Vc-63-GPi" secondAttribute="bottom" constant="4" id="6wc-L3-dY9"/>
+                                <constraint firstItem="4Vc-63-GPi" firstAttribute="top" secondItem="4oj-fa-nqT" secondAttribute="top" constant="4" id="PvC-zz-PwW"/>
+                                <constraint firstItem="4Vc-63-GPi" firstAttribute="leading" secondItem="4oj-fa-nqT" secondAttribute="leading" constant="20" id="SeR-Ln-nJM"/>
+                                <constraint firstAttribute="trailing" secondItem="4Vc-63-GPi" secondAttribute="trailing" constant="20" id="c7f-mP-2OG"/>
+                                <constraint firstAttribute="height" constant="50" id="og7-xE-UAX"/>
+                            </constraints>
+                        </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tkH-Z8-mO4" userLabel="ViewClose">
-                            <rect key="frame" x="0.0" y="237" width="394" height="50"/>
+                            <rect key="frame" x="0.0" y="287" width="374" height="50"/>
                             <subviews>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lKt-7O-VQo">
-                                    <rect key="frame" x="309" y="9.5" width="69" height="31"/>
+                                    <rect key="frame" x="289" y="9.5" width="69" height="31"/>
                                     <color key="tintColor" systemColor="systemIndigoColor"/>
                                     <state key="normal" title="Button"/>
                                     <buttonConfiguration key="configuration" style="plain" title="CLOSE"/>
@@ -123,11 +141,13 @@
                 <constraint firstItem="HKJ-2f-NGi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="RtN-O0-5Fa"/>
                 <constraint firstAttribute="bottom" secondItem="HKJ-2f-NGi" secondAttribute="bottom" id="TN4-G6-XcQ"/>
                 <constraint firstAttribute="trailing" secondItem="HKJ-2f-NGi" secondAttribute="trailing" id="h6O-5P-cmX"/>
-                <constraint firstItem="Vlp-Nb-Vb6" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" multiplier="0.951691" id="xm4-jA-Gzj"/>
+                <constraint firstItem="Vlp-Nb-Vb6" firstAttribute="width" secondItem="iN0-l3-epB" secondAttribute="width" constant="-40" id="xm4-jA-Gzj"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="constraintHeightOfView" destination="9gC-lL-eKt" id="3ln-RC-mzp"/>
+                <outlet property="customValueField" destination="4Vc-63-GPi" id="KuW-MO-Mhs"/>
+                <outlet property="customValueFieldView" destination="4oj-fa-nqT" id="ccR-X1-eK0"/>
                 <outlet property="tableView" destination="hM3-Qm-T6h" id="ZMC-VM-hID"/>
                 <outlet property="txtFSearch" destination="aC8-wB-Hf7" id="kcx-mn-meg"/>
             </connections>
