--- a/inSooqApp/Controllers/Forms/Elements/FormTextView/FormTextView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/FormTextView/FormTextView.xib
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -12,15 +13,43 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="Lxh-S5-cnL" customClass="FormTextView" customModule="inSooqApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="98"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <subviews>
+                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Qbx-1R-d4G">
+                    <rect key="frame" x="4" y="4" width="406" height="90"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <color key="tintColor" name="labelOrange"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="90" id="2Pj-Fz-QdM"/>
+                    </constraints>
+                    <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="string" keyPath="placeholder" value="Placeholder"/>
+                    </userDefinedRuntimeAttributes>
+                </textView>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="7Y8-I1-6Ks"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="Qbx-1R-d4G" firstAttribute="leading" secondItem="7Y8-I1-6Ks" secondAttribute="leading" constant="4" id="ARK-gE-lYG"/>
+                <constraint firstItem="7Y8-I1-6Ks" firstAttribute="trailing" secondItem="Qbx-1R-d4G" secondAttribute="trailing" constant="4" id="MUY-iz-x0S"/>
+                <constraint firstItem="Qbx-1R-d4G" firstAttribute="top" secondItem="Lxh-S5-cnL" secondAttribute="top" constant="4" id="ueE-8R-jAx"/>
+                <constraint firstItem="7Y8-I1-6Ks" firstAttribute="bottom" secondItem="Qbx-1R-d4G" secondAttribute="bottom" constant="4" id="vEK-cr-X4S"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="-159" y="-2"/>
+            <connections>
+                <outlet property="textView" destination="Qbx-1R-d4G" id="JjL-rf-fTs"/>
+            </connections>
+            <point key="canvasLocation" x="-159.42028985507247" y="-20.424107142857142"/>
         </view>
     </objects>
     <resources>
+        <namedColor name="labelOrange">
+            <color red="1" green="0.54100000858306885" blue="0.016000000759959221" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
